<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_coin_list">
    <fragment
        android:id="@+id/navigation_coin_list"
        android:name="app.useful.cryptocurrencytrackerandroidapp.ui.fragments.coinlist.CoinListFragment"
        android:label="@string/title_coin_list"
        tools:layout="@layout/fragment_coin_list" >
        <action
            android:id="@+id/action_navigation_coin_list_to_coin_detail_fragment"
            app:destination="@id/coin_detail_fragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_investments"
        android:name="app.useful.cryptocurrencytrackerandroidapp.ui.fragments.investments.InvestmentsFragment"
        android:label="@string/title_investments"
        tools:layout="@layout/fragment_investments" >
        <action
            android:id="@+id/action_navigation_investments_to_investDetailFragment"
            app:destination="@id/investDetailFragment"
            app:enterAnim="@android:anim/slide_out_right"
            app:exitAnim="@android:anim/slide_in_left"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/investDetailFragment"
        android:name="app.useful.cryptocurrencytrackerandroidapp.ui.fragments.investdetail.InvestDetailFragment"
        android:label="@string/title_invest_detail"
        tools:layout="@layout/fragment_invest_detail">
        <action
            android:id="@+id/action_investDetailFragment_to_navigation_investments"
            app:destination="@id/navigation_investments"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/coin_detail_fragment"
        android:name="app.useful.cryptocurrencytrackerandroidapp.ui.fragments.coindetail.CoinDetailFragment"
        android:label="@string/title_coin_detail"
        tools:layout="@layout/fragment_coin_detail">
        <action
            android:id="@+id/action_coin_detail_fragment_to_add_invest_fragment"
            app:destination="@id/add_invest_fragment" />
        <action
            android:id="@+id/action_coin_detail_fragment_to_navigation_coin_list3"
            app:destination="@id/navigation_coin_list" />
        <argument
            android:name="key2"
            app:argType="string"
            android:defaultValue="Default Value" />
    </fragment>


    <fragment
        android:id="@+id/add_invest_fragment"
        android:name="app.useful.cryptocurrencytrackerandroidapp.ui.fragments.addinvest.AddInvestFragment"
        android:label="@string/title_add_invest"
        tools:layout="@layout/fragment_add_invest" >
        <action
            android:id="@+id/action_add_invest_fragment_to_navigation_investments"
            app:destination="@id/navigation_investments" />
        <action
            android:id="@+id/action_add_invest_fragment_to_coin_detail_fragment"
            app:destination="@id/coin_detail_fragment" />
        <argument
            android:name="name"
            app:argType="string"
            android:defaultValue="default value name" />
    </fragment>
</navigation>