<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.fragments.addinvest.AddInvestFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_coin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="Bitcoin"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/detail_coin_img"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="16dp" />

        <TextView
            android:id="@+id/detail_coin_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="42 178$"
            android:textSize="18dp" />

        <LinearLayout
            android:id="@+id/llDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/detail_coin_label_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_invest_date" />

            <TextView
                android:id="@+id/detail_coin_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   26.09.2021" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/detail_coin_label_name_invest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_invest_invest_name"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/detail_coin_name_invest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/detail_coin_label_amount_invest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_invest_investment_amount"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/detail_coin_amount_invest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_add_invest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_invest_btn_invest" />

    </LinearLayout>


</LinearLayout>