<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.coindetail.CoinDetailFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/coin_detail_coin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bitcoin"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/coin_detail_coin_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/coin_detail_coin_name"
                android:text="BTC"
                android:textSize="26dp" />

            <ImageView
                android:id="@+id/coin_detail_coin_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/coin_detail_coin_symbol"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_baseline_format_align_justify_24" />

            <TextView
                android:id="@+id/coin_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:text="- - -"
                android:textSize="24dp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1h" />

            <TextView
                android:id="@+id/detail_coin_1h_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="24h" />

            <TextView
                android:id="@+id/detail_coin_24h_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7d" />

            <TextView
                android:id="@+id/detail_coin_7d_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30d" />

            <TextView
                android:id="@+id/detail_coin_30d_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60d" />

            <TextView
                android:id="@+id/detail_coin_60d_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="90d" />

            <TextView
                android:id="@+id/detail_coin_90d_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_detail_market_cap"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_coin_market_cap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="- - -" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_deail_volume_24h"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_coin_volume24h"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- - -" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coin_detail_market_cap_dominance"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_coin_dominance"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- - -" />

        </RelativeLayout>
    </LinearLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/coin_detail_btn_add_invest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16sp"
            android:background="@color/black"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="#000000" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>